--- a/src/views/paginas/verCancha.hbs
+++ b/src/views/paginas/verCancha.hbs
@@ -16,9 +16,8 @@
                         <img src="/img/descarga/{{img}}" alt="" width="250" height="200">
                     </div>
                     <div class="card-footer">
-                        <b>Horario -</b>
-                        <b>De {{horaInicio}}hs</b>
-                        <b>a {{horaFin}}hs</b>
+                        <a href="/paginas/diasCancha" type="link" class="link link-primary">Ver dias y horario</a>
+                        <button class="btn btn-primary">Reservar</button>
                     </div>
                 </div>
             </div>
