--- a/src/views/paginas/duenio.hbs
+++ b/src/views/paginas/duenio.hbs
@@ -21,12 +21,12 @@
                     </a>
                 </div>
                 <div id="scrollEstablecimientos">
-                    <table class="table table-hover table-info">
+                    <table id="myTable" class="table table-hover table-info">
                         <thead>
                             <tr>
-                                <th>Nombre</th>
-                                <th>Dirección</th>
-                                <th>Cuit</th>                                   
+                                <th onclick="sortTable(0, 'str')">Nombre</th>
+                                <th onclick="sortTable(1, 'str')">Dirección</th>
+                                <th onclick="sortTable(2, 'str')">Cuit</th>                                   
                                 <th>Opción</th>
                             </tr>
                         </thead>
