--- a/src/views/partials/barra.hbs
+++ b/src/views/partials/barra.hbs
@@ -79,10 +79,10 @@
             <!-- Modal body -->
             <div class="modal-body" id="miPerfil">
                 <div id="sello" class="row ">
-                    <div class="col-sm-3">
+                    <div class="col-3">
                        <a href="/paginas/miPerfil/{{user.idUsuarios}}"><img class="zoom" src="/img/descarga/{{user.img}}" alt="" width="125" height="120"></a>
                     </div>
-                    <div class="col-sm-8">
+                    <div class="col-8">
                         <div class="d-flex">
                             <b><pre class="ms-2">Nombre:{{user.nombre}}</pre></b>
                         </div>
