--- a/src/views/paginas/equipo.hbs
+++ b/src/views/paginas/equipo.hbs
@@ -20,8 +20,8 @@
             </table>
         </div>
     </div>
-    <div class="col-2  p-3">
-        <a id="volver" href="javascript: history.go(-1)" type="button" class="btn btn-danger">Volver</a>
+    <div id="regresar" class="col-2  p-3">
+        
     </div>
     
     {{#unless pertenezco}}
@@ -76,4 +76,20 @@
         }
     } 
 claseDeporte()
+</script>
+
+<script>
+    function volverDeporte() {
+        var numero = {{idDeportes}} 
+        if ( numero ==  3 || numero== 2 || numero == 1) {           
+            document.getElementById("regresar").innerHTML += `<a id="volver" href="/paginas/futbol" type="button" class="btn btn-danger">Volver</a>`            
+        }
+        if (numero ==4 ) {
+             document.getElementById("regresar").innerHTML += `<a id="volver" href="/paginas/basquet" type="button" class="btn btn-danger">Volver</a>`      
+        }
+        if (numero == 5) {
+              document.getElementById("regresar").innerHTML += `<a id="volver" href="/paginas/padel" type="button" class="btn btn-danger">Volver</a>` 
+        }
+    } 
+volverDeporte()
 </script>
