--- a/src/views/paginas/verCancha.hbs
+++ b/src/views/paginas/verCancha.hbs
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         {{#each nombre}}
         <div class="card text-center mb-4">
-            <h2 class="mb-3  mx-auto">{{nombreEstablecimiento}}</h2>
+            <h2 class="mb-3  mx-auto"><b>{{nombreEstablecimiento}}</b> - <i>{{direccion}}</i></h2>
         </div>
         {{/each}}
         <div id="scrollMisCanchas" class="rows" >
