--- a/src/views/paginas/verCancha.hbs
+++ b/src/views/paginas/verCancha.hbs
@@ -16,7 +16,7 @@
                         <img src="/img/descarga/{{img}}" alt="" width="250" height="200">
                     </div>
                     <div class="card-footer">
-                        <a href="/paginas/diasCancha" type="link" class="link link-primary">Ver dias y horario</a>
+                        <a href="/paginas/diasCancha/{{idCancha}}" type="link" class="link link-primary">Ver dias y horario</a>
                         <button class="btn btn-primary">Reservar</button>
                     </div>
                 </div>
