--- a/src/views/paginas/diasCancha.hbs
+++ b/src/views/paginas/diasCancha.hbs
@@ -2,21 +2,29 @@
     <div class="container-fluid">
         <div class="d-flex p-3">
             <div id="semiTransparente" class="col-lg-9 m-auto p-4 px-2">
+                  {{#each cancha}}
                 <div class="card">
-                    <h3 class="mt-3 text-center">Establecimiento - Cancha Nº 1 - Fútbol 11</h3>
+                  
+                    <h3 class="mt-3 text-center">{{nombreEstablecimiento}}- Cancha Nº {{numeroCancha}} - {{deporte}}</h3>
                 </div>
                 <div class="row row-cols-2">
                     <div class="col-lg-8 m-0 mt-4 py-4">
-                        <img src="/img/descarga/1c115d5d-979d-4630-947c-f11c28d44f94.jpg" width="620">                        
+                        <img src="/img/descarga/{{img}}" width="620">                        
                     </div>
                     <div class="card col-lg-3 m-4 mt-5 py-5">
+                        <i for="nombreUsuario"><b>Dirección: </b>{{direccion}}</i>
+                        <br>
+                        <i for="nombreUsuario"><b>Horario: </b>De {{horaInicio}}hs a {{horaFin}}hs</i>    <br>                                          
+                     {{/each}}
                         <i for="nombre"><b>Días disponible: </b>{{nombre}}</i>
-                        <br>
-                        <i for="nombreUsuario"><b>Horario: </b>De {{horaInicio}}hs a {{horaFin}}hs</i>
-                        <br>
-                        <i for="nombreUsuario"><b>Dirección: </b>{{nombreUsuario}}</i>
+                        {{#each dias}}
+                        <ul>
+                            <li>{{diaDetalle}}</li>
+                        </ul>
+                        {{/each}}
                     </div>
                 </div>
+                
             </div>
         </div>
         <div class="col-2  p-2">
