--- a/src/views/paginas/futbol.hbs
+++ b/src/views/paginas/futbol.hbs
@@ -81,6 +81,33 @@
                                     <a href="/paginas/verCancha/{{idEstablecimiento}}">{{nombreEstablecimiento}}</a>
                                 </td>
                                 <td>{{direccion}}</td>
+                                {{!--<td>ejemplo 1 <form id="val">
+                                        <p id="p">
+                                            <input id="radio1" type="radio" name="estrellas" value="5"><!--
+                                            --><label id="label" for="radio1">★</label><!--
+                                            --><input id="radio2" type="radio" name="estrellas" value="4"><!--
+                                            --><label id="label" for="radio2">★</label><!--
+                                            --><input id="radio3" type="radio" name="estrellas" value="3"><!--
+                                            --><label id="label" for="radio3">★</label><!--
+                                            --><input id="radio4" type="radio" name="estrellas" value="2"><!--
+                                            --><label id="label" for="radio4">★</label><!--
+                                            --><input id="radio5" type="radio" name="estrellas" value="1"><!--
+                                            --><label id="label" for="radio5">★</label>
+                                        </p>
+                                    </form>--}}
+                                    {{!--ejemplo 2
+                                    <div class="starts">
+                                        <ul id="pingStar">
+                                            <li id="list" rel = "1" title = "1  "> ★ </li>
+                                            <li id="list" rel = "2" title = "2  "> ★ </li>
+                                            <li id="list" rel = "3" title = "3  "> ★ </li>
+                                            <li id="list" rel = "4" title = "4  "> ★ </li>
+                                            <li id="list" rel = "5" title = "5  "> ★ </li>
+                                            <span id="dir"></span>
+                                        </ul>
+                                        <input type="hidden" value="" id="startP">
+                                    </div>
+                                </td> --}}
                                 <td><a href="/paginas/verMapa/{{idEstablecimiento}}">Ver mapa</a></td>
                             </tr>
                             {{/each}}
@@ -187,3 +214,41 @@
     }
 </script>
 
+<!--ejemplo2 valoracion
+<script>
+    window.onload = function () {
+        var s = document.getElementById("pingStar"),
+        m = document.getElementById('dir'),
+        n = s.getElementsByTagName("li"),
+                            input = document.getElementById ('startP'); // Guarda el valor seleccionado
+        clearAll = function () {
+        for (var i = 0; i < n.length; i++) {
+        n[i].className = '';
+        }
+        }
+        for (var i = 0; i < n.length; i++) {
+        n[i].onclick = function () {
+        var q = this.getAttribute("rel");
+        clearAll();
+        input.value = q;
+        for (var i = 0; i < q; i++) {
+        n[i].className = 'on';
+        }
+        m.innerHTML = this.getAttribute("title");
+        }
+        n[i].onmouseover = function () {
+        var q = this.getAttribute("rel");
+        clearAll();
+        for (var i = 0; i < q; i++) {
+        n[i].className = 'on';
+        }
+        }
+        n[i].onmouseout = function () {
+        clearAll();
+        for (var i = 0; i < input.value; i++) {
+        n[i].className = 'on';
+        }
+        }
+        }
+    }
+</script>-->
