--- a/src/views/ingreso/registro.hbs
+++ b/src/views/ingreso/registro.hbs
@@ -33,7 +33,7 @@
                             <div class="input-group mb-3">
                                 <input type="password" class="form-control" name="contrasenia" placeholder="Contraseña" pattern="[a-z0-9]{3,8}" required>
                             </div>
-                            <span style="font-size:small">(La contraseña debe ser alfa-numérica y contener de 3 a 8 caracteres)</span>
+                            <span style="font-size:small">(La contraseña puede ser alfa-numérica y contener de 3 a 8 caracteres)</span>
                             <span><hr class="dropdown-divider"></span>
                             <div class="d-grid mb-2">
                                 <button type="submit" class="btn btn-success btn-block">
