--- a/src/views/paginas/verCancha.hbs
+++ b/src/views/paginas/verCancha.hbs
@@ -5,7 +5,7 @@
             <h2 class="mb-3  mx-auto"><b>{{nombreEstablecimiento}}</b> - <i>{{direccion}}</i></h2>
         </div>
         {{/each}}
-        <div id="scrollMisCanchas" class="rows" >
+        <div id="scrollMisCanchas" class="row" >
             {{#each establecimiento}}
             <div class="col-lg-4 mb-4">
                 <div class="card bg-white" style="opacity: 1;">
