--- a/src/views/reserva/reservaDeporte2.hbs
+++ b/src/views/reserva/reservaDeporte2.hbs
@@ -6,10 +6,8 @@
         <div class="row row-cols-2 pb-5">
             <div class="col-md-4 m-0 mt-3 py-4 pb-5" style="background-color: rgb(255, 255, 255, 0.5);">
                 <div class="text-center">
-                    <h3>Elige Turno</h3>
-                    <button class="btn btn-primary mb-3" id="botonTurnos"
-                        onclick="return misTurnos({{turno.horaInicio}}, {{turno.horaFin}})">Ver Turnos</button>
-                    <form action="/paginas/reservaDeporte2/{{idCancha}}&fechaSeleccionada" method="POST">
+                    <h3>Elige Turno</h3>             
+                    
                         <div class="container">
                             <div id="texto" class="row justify-content-around">
                             </div>
@@ -38,7 +36,9 @@
 let tomarParametro = new URLSearchParams(window.location.href);
 let fechaSeleccionada = tomarParametro.get('fecha');
 let diaActual=  new Date()
-function misTurnos(a, b) {        
+function misTurnos() {  
+        var inicio= {{turno.horaInicio}}
+        var fin= {{turno.horaFin}}     
         const convertirFecha= (fecha)=>{
             let mes= fecha.getMonth()+1;
             if (mes < 10) {
@@ -51,23 +51,21 @@ function misTurnos(a, b) {
         }
          let horaActual= new Date().getHours()+1;    
          
-        for (let i = a; i <= b; i++) {              
+        for (let i = inicio; i <= fin; i++) {              
             if ((convertirFecha(diaActual) == fechaSeleccionada) & ( horaActual >= i )) {
                 continue;
             }    
                 
             {{#each reservas }}
-          
-            if (i == {{ hora }}) {
-                document.getElementById("texto").innerHTML += `<div class="col-4 mb-3 m-2 bg-danger"><input type="radio" name="turno" id="" value="${i}" disabled> ${i}:00 Hs</div>`; continue;
+            idCancha= {{idCancha}}
+            hora= {{hora}}
+            if (i == hora) {
+                document.getElementById("texto").innerHTML += `<a class="btn btn-danger mb-3" href=#> ${i}:00 Hs (RESERVADO)</a>`;continue;
             }
             {{/each}}       
-            document.getElementById("texto").innerHTML += `<div class="col-4 mb-3 m-2 bg-primary"><input type="radio" name="turno" id="" value="${i}" required> ${i}:00 Hs</div>`;
+            document.getElementById("texto").innerHTML += `<a class="btn btn-primary mb-3" href="/paginas/reservaDeporte3/${i}"> ${i}:00 Hs</a>`;
         }
-document.getElementById("texto").innerHTML += `<button id="botonReservar" type="submit" class="btn btn-success text-dark">Reservar</button>`
-        }      
-let btnTurnos = document.getElementById("botonTurnos");
-let disableButton = function () { this.disabled = true; };
-btnTurnos.addEventListener('click', disableButton, false)
+}      
+misTurnos()
 
 </script>
