--- a/src/views/reserva/reservaDeporte1.hbs
+++ b/src/views/reserva/reservaDeporte1.hbs
@@ -5,7 +5,7 @@
         </div>
     </div>
     <div class="container-fluid">
-        <form action="/paginas/reservaDeporte1/{{idDeportes}}" method="POST">
+        <form action="/paginas/reservaDeporte1/{{deporte}}" method="POST">
         <div class="row row-cols-2 pb-5">            
             <div class="col-md-4 m-0 mt-4 py-4" style="background-color: rgb(255, 255, 255, 0.5);">
                 <div class="text-center">
