--- a/src/views/paginas/inicio.hbs
+++ b/src/views/paginas/inicio.hbs
@@ -4,18 +4,18 @@
             <div id="btnCentro" class="py-5 mx-auto">
                 <a href="deporte" type="button" data-bs-toggle="tooltip" data-bs-placement="top" title="Ingresa para realizar deportes.">
                     <!-- logo jugador -->
-                    <img class="zoom1" src="/img/app/logoJugador1.png" srcset="/img/app/logoJugador1.png 1400w, /img/app/logoJugador1.png 300w"
+                    <img class="zoom" src="/img/app/logoJugador1.png" srcset="/img/app/logoJugador1.png 1400w, /img/app/logoJugador1.png 300w"
                     sizes="(mim-width: 500px) 33.3vw, 100vw" alt="Logo Jugador" class="mx-1">
                 </a>
             </div>
             <div id="btnCentro" class="py-5 mx-auto">
                 <!-- logo de la app -->
-                <img src="/img/app/logo4.png" alt="Logo App" class="mx-1">
+                <img src="/img/app/logo4.png" alt="Logo App" class="mx-1" style="opacity: 0.7;">
             </div>
             <div id="btnCentro" class="py-5 mx-auto">
                 <a href="duenio" type="button" data-bs-toggle="tooltip" data-bs-placement="top" title="Ingresa para subir tus canchas.">
                     <!-- logo cancha -->
-                    <img class="zoom1" src="/img/app/logoCancha1.png" srcset="/img/app/logoCancha1.png 1400w, /img/app/logoCancha1.png 300w"
+                    <img class="zoom" src="/img/app/logoCancha1.png" srcset="/img/app/logoCancha1.png 1400w, /img/app/logoCancha1.png 300w"
                     sizes="(mim-width: 500px) 33.3vw, 100vw"  alt="Logo Cancha" class="mx-1">
                 </a>
             </div>
