--- a/src/views/partials/barra.hbs
+++ b/src/views/partials/barra.hbs
@@ -51,7 +51,7 @@
             </ul>
         </div>
         <li class="navbar-nav nav-item">
-            <a type="button" class="btn btn-primary" href="/paginas/reservaDeporte">Reservá ya!</a>
+            <a type="button" class="btn btn-warning text-dark" href="/paginas/reservaDeporte">Reservá ya!</a>
         </li>
         
         <li class="navbar-nav nav-item">
