--- a/src/views/paginas/diasCancha.hbs
+++ b/src/views/paginas/diasCancha.hbs
@@ -3,8 +3,7 @@
         <div class="d-flex p-3">
             <div id="semiTransparente" class="col-lg-9 m-auto p-4 px-2">
                   {{#each cancha}}
-                <div class="card">
-                  
+                <div class="card">                  
                     <h3 class="mt-3 text-center">{{nombreEstablecimiento}}- Cancha Nº {{numeroCancha}} - {{deporte}}</h3>
                 </div>
                 <div class="row row-cols-2">
@@ -24,7 +23,12 @@
                         {{/each}}
                     </div>
                 </div>
-                
+                <div class="row">
+                    <div class="container mx-auto">
+                    <h3 class="text-white text-center">Como llegar?</h3>
+                        <iframe class="mx-5" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13392.411200382541!2d-68.78983620168967!3d-32.948295202849074!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x967e0c5dbc3dc1bd%3A0x781c6b45571a096f!2sCanchas%20La%20Champion!5e0!3m2!1ses-419!2sar!4v1636238476907!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="col-2  p-2">
