--- a/src/views/paginas/misCanchas.hbs
+++ b/src/views/paginas/misCanchas.hbs
@@ -16,7 +16,8 @@
                     <div class="card-footer">
                         <b>Horario -</b>
                         <b>De {{horaInicio}}hs</b>
-                        <b>a {{horaFin}}hs</b>
+                        <b>a {{horaFin}}hs</b><br>
+                        <a href="/paginas/crearObservacion/{{id}}">Crear Observacion</a>
                     </div>
                 </div>
             </div>
