--- a/src/views/paginas/mapa.hbs
+++ b/src/views/paginas/mapa.hbs
@@ -1,20 +1,34 @@
-<div id="inicio">  
-    <form method="POST" action="/paginas/mapa1/{{idEstablecimiento}}">
-    <p>Puedes crear un acceso al mapa de la siguiente manera</p>
-    <a href="https://www.google.com.ar/maps" target="_blank" >Google Maps</a>
-      <label for="mapa" class="text-white"> Pegar el Vinculo aqui</label>
-      <input id="mapa" type="text" name="mapa" required>
-        </div> 
-        <div class="col-5 mx-auto p-4" style="background-color: blanchedalmond;">
-            <button type="submit" class="btn btn-success btn-block">
-                Cargar
-            </button>
-            
-            <a href="javascript: history.go(-1)" type="button" class="btn btn-danger btn-block">
-                Cancelar
-            </a>
-        </div>  
-    </form> 
+<div id="inicio" style="width: 100%; height: 530px;" >  
+  <form method="POST" action="/paginas/mapa1/{{idEstablecimiento}}">
+    <div class="row">
+      <div id="semiTransparente" class="col-5 m-auto py-3 px-3 ">
+        <div class="card">
+          <div class="card-header">
+            <h1  class=" mt-3 text-center py-2">CREA TU EQUIPO</h1>
+          </div>
+          <div class="card-body">
+            <div class="input-group mb-3 py-2">
+              <a href="https://www.google.com.ar/maps" target="_blank" >Google Maps</a>
+            </div>
+            <div class="input-group mb-2 justify-content-between py-2">
+              <label for="mapa"> Pegar el Vinculo aquí</label>
+              <input id="mapa" type="text" name="mapa" required>
+            </div>
+          </div>
+        </div>
+      </div> 
+    <div>
+    <div class="row">
+      <div id="semiTransparente" class="col-5 m-auto py-3">
+        <button type="submit" class="btn btn-success btn-block">
+            Cargar
+        </button>
+        <a href="javascript: history.go(-1)" type="button" class="btn btn-danger btn-block">
+            Cancelar
+        </a>
+      </div>
+    </div>
+  </form> 
 </div>
 
 
@@ -26,40 +40,6 @@
 function showGoogleMaps()
 {
     
-<<<<<<< HEAD
-    //Creamos el punto a partir de la latitud y longitud de una dirección:
-    var point = new google.maps.LatLng(-32.8876, -68.8292);
-    //var point = new google.maps.Map({{latitud}}, {{longitud}}),
-      
-    //Configuramos las opciones indicando zoom, punto y tipo de mapa
-    var myOptions = {
-        zoom: 15, 
-        center: point, 
-        mapTypeId: google.maps.MapTypeId.ROADMAP
-    };
- 
-    //Creamos el mapa y lo asociamos a nuestro contenedor
-    var map = new google.maps.Map(document.getElementById("showMap"),  myOptions);
- 
-    //Mostramos el marcador en el punto que hemos creado
-    var marker = new google.maps.Marker({
-        position:point,
-        draggable: true,
-        map: map,
-        title: '{{direccion}}'
-    });
-    google.maps.event.addListener(marker, 'dragend', function(event) {
-       
-        document.getElementById("coords").value = this.getPosition().lat()+","+this.getPosition().lng();     
-        var lat = marker.getPosition().lat();
-        var long = marker.getPosition().lng();     
-       
-             
-    });
-    
-    
-    
-=======
   //Creamos el punto a partir de la latitud y longitud de una dirección:
   var point = new google.maps.LatLng({{latitud}}, {{longitud}});
     
@@ -89,12 +69,7 @@ function showGoogleMaps()
 
       document.getElementById("showMap").innerHTML += `<input id="mapLong" type="text" name="long" value=${long}> <input id="mapLong" type="text" name="lat" value=${lat}>`;
   });
->>>>>>> 549c059b578826045a65c9fbb46a98d638bd4abb
 }
 showGoogleMaps();
 {{/with}}
 </script>
-<<<<<<< HEAD
-
-=======
->>>>>>> 549c059b578826045a65c9fbb46a98d638bd4abb
