solucionamos problemas de la fecha de reserva

--- a/src/views/paginas/cancha.hbs
+++ b/src/views/paginas/cancha.hbs
@@ -33,7 +33,7 @@
                     <div class="container  py-2">
                         <label for="horario">Horario de Atencion <span style="color: red;"> * </span></label>
                         <select name="horaInicio" class="btn btn-ls btn-primary" required>
-                            <option>Desde</option>
+                            <option selected disabled>Desde</option>
                             <option value="0" type="number">0</option>
                             <option value="1" type="number">1</option>
                             <option value="2" type="number">2</option>
@@ -60,7 +60,7 @@
                             <option value="23" type="number">23</option>
                         </select>
                         <select name="horaFin" class="btn btn-ls btn-primary" required>
-                            <option>Hasta</option>
+                            <option selected disabled>Hasta</option>
                             <option value="0" type="number">0</option>
                             <option value="1" type="number">1</option>
                             <option value="2" type="number">2</option>
