--- a/src/views/paginas/duenio.hbs
+++ b/src/views/paginas/duenio.hbs
@@ -19,6 +19,15 @@
                             {{/each}}
                         </ul>
                     </a>
+                     <a class="navbar-brand">
+                        <a class="btn btn-dark btn-lg dropdown-toggle text-white" href="#" id="dropdown04"
+                            data-bs-toggle="dropdown" aria-expanded="false">EDITAR</a>
+                        <ul class="dropdown-menu" aria-labelledby="dropdown04">
+                            {{#each canchas}}
+                            <li><a class="dropdown-item" href="editarEstablecimiento/{{idEstablecimiento}}">{{nombreEstablecimiento}}</a></li>
+                            {{/each}}
+                        </ul>
+                    </a>
                 </div>
                 <div id="scrollEstablecimientos">
                     <table id="myTable" class="table table-hover table-info">
