nueva pantalla reserva directa

--- a/src/views/paginas/verCancha.hbs
+++ b/src/views/paginas/verCancha.hbs
@@ -17,7 +17,7 @@
                     </div>
                     <div class="card-footer">
                         <a href="/paginas/diasCancha/{{idCancha}}" type="link" class="link link-primary">Ver dias y horario</a>
-                        <a class="btn btn-primary" href="/paginas/reservaDeporte1/{{idDeportes}}">Reservar</a>
+                        <a class="btn btn-primary" href="/paginas/reservaDeporteDirecto/{{idCancha}}">Reservar</a>
                     </div>
                 </div>
             </div>
