--- a/src/views/paginas/cancha.hbs
+++ b/src/views/paginas/cancha.hbs
@@ -6,7 +6,7 @@
                 <h2>"{{datosEstablecimiento.nombreEstablecimiento}}"</h2>
             </div>
             <div id="semiTransparente" class="text-white">
-                <form action="/paginas/cancha/{{idEstablecimiento}}" method="POST" enctype="multipart/form-data">
+                <form action="/paginas/cancha/{{idEstablecimiento}}" method="POST" enctype="multipart/form-data" onsubmit="return verificar();">
                     
                     <div class="container mt-4 ">
                         <label for="numeroCancha">Numero de Cancha<span style="color: red;"> *</span></label>
@@ -33,7 +33,7 @@
                     <div class="container  py-2">
                         <label for="horario">Horario de Atencion <span style="color: red;"> * </span></label>
                         <select name="horaInicio" class="btn btn-ls btn-primary" required>
-                            <option>Desde</option>
+                            <option value="" selected disabled>Desde</option>
                             <option value="0" type="number">0</option>
                             <option value="1" type="number">1</option>
                             <option value="2" type="number">2</option>
@@ -60,7 +60,7 @@
                             <option value="23" type="number">23</option>
                         </select>
                         <select name="horaFin" class="btn btn-ls btn-primary" required>
-                            <option>Hasta</option>
+                            <option value="" selected disabled>Hasta</option>
                             <option value="0" type="number">0</option>
                             <option value="1" type="number">1</option>
                             <option value="2" type="number">2</option>
@@ -109,3 +109,25 @@
         </div>
     </div>
 </div>
+
+<script type="text/javascript">
+//<![CDATA[
+function verificar(){
+var suma = 0;
+var los_cboxes = document.getElementsByName('dia[]'); 
+for (var i = 0, j = los_cboxes.length; i < j; i++) {
+    
+    if(los_cboxes[i].checked == true){
+    suma++;
+    }
+}
+ 
+if(suma == 0){
+alert('Debe completar todos los campos requeridos');
+return false;
+}else{
+}
+ 
+}
+//]]>
+</script>
