--- a/src/views/paginas/diasCancha.hbs
+++ b/src/views/paginas/diasCancha.hbs
@@ -10,7 +10,7 @@
                     <div class="col-lg-8 m-0 mt-4 py-4">
                         <img src="/img/descarga/{{img}}" width="620">                        
                     </div>
-                    <div class="card col-lg-3 m-4 mt-5 py-5">
+                    <div class="card col-lg-3 m-4 mt-5 py-3">
                         <i for="nombreUsuario"><b>Dirección: </b>{{direccion}}</i>
                         <br>
                         <i for="nombreUsuario"><b>Horario: </b>De {{horaInicio}}hs a {{horaFin}}hs</i>    <br>                                          
@@ -24,12 +24,14 @@
                     </div>
                 </div>
                  {{#each cancha}}
+                 {{#if mapa}}
                 <div class="row">
                     <div class="container mx-auto">
                     <h3 class="text-white text-center">Como llegar?</h3>                
                   {{{mapa}}}                 
                     </div>
                 </div>
+                {{/if}}
                 {{/each}}
             </div>
         </div>
