--- a/src/views/paginas/padel.hbs
+++ b/src/views/paginas/padel.hbs
@@ -78,7 +78,11 @@
                                     <a href="/paginas/verCancha/{{idEstablecimiento}}">{{nombreEstablecimiento}}</a>
                                 </td>
                                 <td>{{direccion}}</td>
+                                {{#if mapa}}
                                 <td><a href="/paginas/verMapa/{{idEstablecimiento}}">Ver mapa</a></td>
+                                {{else}}
+                                <td><a href="" style="pointer-events: none; cursor: default; color:rgb(168, 168, 168)">Ver mapa</a></td>
+                                {{/if}}
                             </tr>
                             {{/each}}
                         </tbody>
