editar establecimiento, mapajugador, crear observacion

--- a/src/views/paginas/equipo.hbs
+++ b/src/views/paginas/equipo.hbs
@@ -27,7 +27,7 @@
     {{#unless pertenezco}}
     <div class="container">
         <div id="semiTransparente" class="col-7 m-auto p-1 text-center">
-            <h3 style="color: rgb(0, 0, 0);">¿Querés ser parte del Equipo?</h3>
+            <h3 style="color: white;">¿Querés ser parte del Equipo?</h3>
             <form  action="/paginas/ingresarAlEquipo/{{numero}}&{{idDeportes}}" method="get">
                 <div id="deporteFormulario" class="col-6 mx-auto py-2">             
             </form>
