--- a/src/views/paginas/establecimiento.hbs
+++ b/src/views/paginas/establecimiento.hbs
@@ -8,7 +8,7 @@
             
             <div class="input-group mb-3">          
                 <b><span style="color: red;">*  </span></b>                      
-                <input type="number" class="form-control" name="cuit" placeholder="CUIT (sin guiones)" maxlength="11" minlength="11" required autofocus>
+                <input type="numeric" class="form-control" name="cuit" placeholder="CUIT (sin guiones)" pattern="[0-9!?]{10,11}" required autofocus>
             </div>
             <div class="input-group mb-3">          
                 <b><span style="color: red;">*  </span></b>                      
