--- a/src/views/paginas/mapa.hbs
+++ b/src/views/paginas/mapa.hbs
@@ -6,7 +6,7 @@
   {{/if }} 
   <form method="POST" action="/paginas/mapa1/{{idEstablecimiento}}">
     <div class="row pt-3 py-3">
-      <div id="semiTransparente" class="col-7 m-auto py-3 px-3 ">
+      <div id="semiTransparente" class="col-lg-7 m-auto py-3 px-3 ">
         <div class="card">
           <div class="card-header">
             <h1 class="text-center py-2">UBICACIÓN DEL ESTABLECIMIENTO</h1>
@@ -21,9 +21,17 @@
             </div>
             <div class="input-group mb-2">
               <p>3- Dale click en "Compartir".</p>
+              <div >
+                <img src="/img/app/cargaMapa1.png" >
+              </div>
             </div>
             <div class="input-group mb-2">
-              <p>4- De la pestaña "Incorporar un mapa", copiá el link desde el botón "COPIAR HTML".</p>
+              <p>4- Dale click en "Incorporar un mapa".</p>
+              <img src="/img/app/cargaMapa2.png" >
+            </div>
+            <div class="input-group mb-2">
+              <p>4- Copiá el link desde el botón "COPIAR HTML".</p>
+              <img src="/img/app/cargaMapa3.png" >
             </div>
             <div class="input-group mb-2 justify-content-between ">
               <p>5- Pegá el link aquí:&nbsp;</p>
