--- a/src/views/paginas/misCanchas.hbs
+++ b/src/views/paginas/misCanchas.hbs
@@ -14,10 +14,8 @@
                         <img src="/img/descarga/{{img}}" alt="" width="250" height="200">
                     </div>
                     <div class="card-footer">
-                        <b>Horario -</b>
-                        <b>De {{horaInicio}}hs</b>
-                        <b>a {{horaFin}}hs</b><br>
-                        <a href="/paginas/crearObservacion/{{id}}">Crear Observacion</a>
+                        <a href="/paginas/diasCancha/{{idCancha}}" type="button" class="btn btn-outline-primary">Días y horario</a>
+                        <a href="/paginas/crearObservacion/{{id}}" class="btn btn-primary">Día no laboral</a>
                     </div>
                 </div>
             </div>
