--- a/src/views/paginas/diasCancha.hbs
+++ b/src/views/paginas/diasCancha.hbs
@@ -1,7 +1,7 @@
 <div id="cancha">
     <div class="container-fluid">
         <div class="d-flex p-3">
-            <div id="semiTransparente" class="col-lg-9 m-auto p-4 px-2">
+            <div id="semiTransparente" class="col-lg-9 m-auto p-3">
                   {{#each cancha}}
                 <div class="card">                  
                     <h3 class="mt-3 text-center">{{nombreEstablecimiento}}- Cancha Nº {{numeroCancha}} - {{deporte}}</h3>
@@ -23,16 +23,6 @@
                         {{/each}}
                     </div>
                 </div>
-                 {{#each cancha}}
-                 {{#if mapa}}
-                <div class="row">
-                    <div class="container mx-auto">
-                    <h3 class="text-white text-center">Como llegar?</h3>                
-                  {{{mapa}}}                 
-                    </div>
-                </div>
-                {{/if}}
-                {{/each}}
             </div>
         </div>
         <div class="col-2  p-2">
