--- a/src/views/paginas/misCanchas.hbs
+++ b/src/views/paginas/misCanchas.hbs
@@ -15,7 +15,7 @@
                     </div>
                     <div class="card-footer">
                         <a href="/paginas/diasCancha/{{idCancha}}" type="button" class="btn btn-outline-primary">Días y horario</a>
-                        <a href="/paginas/crearObservacion/{{id}}" class="btn btn-primary">Día no laboral</a>
+                        <a href="/paginas/crearObservacion/{{idCancha}}" class="btn btn-primary">Día no laboral</a>
                     </div>
                 </div>
             </div>
