--- a/src/views/paginas/diasCancha.hbs
+++ b/src/views/paginas/diasCancha.hbs
@@ -23,6 +23,11 @@
                         {{/each}}
                     </div>
                 </div>
+                {{#each detalle}}
+                    <ul class="col-6 text-white">
+                        <li><p>Día no laboral:&nbsp;{{fecha}}</p><p>Detalle:&nbsp;{{detalle}}</p></li>
+                    </ul>
+                {{/each}}
             </div>
         </div>
         <div class="col-2  p-2">
