Modificacion de la hora y fecha en funcion reservaUsuario

--- a/src/views/paginas/diasCancha.hbs
+++ b/src/views/paginas/diasCancha.hbs
@@ -25,7 +25,7 @@
                 </div>
                 {{#each detalle}}
                     <ul class="col-6 text-white">
-                        <li><p>Día no laboral:&nbsp;{{fecha}}</p><p>Detalle:&nbsp;{{detalle}}</p></li>
+                        <li><p>Día no laboral:&nbsp;{{fechas fecha}}</p><p>Detalle:&nbsp;{{detalle}}</p></li>
                     </ul>
                 {{/each}}
             </div>
